--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Sivaprasad G - Microsoft Certified Trainer specializing in Azure, .NET, React, and Microsoft 365 corporate training"
     />
-    <title>
-      🎓 Sivaprasad G - Microsoft Certified Trainer | Corporate Training Expert
-    </title>
+    <title>Sivaprasad G - MCT</title>
   </head>
   <body>
     <div id="root"></div>
