Enhanced professional portfolio: Added MCT credentials, justified text, ReactJS skills, and simplified favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Sivaprasad G - Microsoft Certified Trainer specializing in Azure, .NET, React, and Microsoft 365 corporate training"
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Sivaprasad G - MCT</title>
   </head>
   <body>
