--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Sivaprasad G - Microsoft Certified Trainer specializing in Azure, .NET, React, and Microsoft 365 corporate training"
+      content="Sivaprasad G - Microsoft Certified Trainer specializing in Azure AI, Cloud Architecture, and Enterprise Training"
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Sivaprasad G - MCT</title>
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" type="image/png" href="/mct-logo.png" />
+    <title>
+      Sivaprasad G - Microsoft Certified Trainer | Azure AI & Cloud Training
+    </title>
   </head>
   <body>
     <div id="root"></div>
